--- a/example/package.json
+++ b/example/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.6",
-    "next-image-trace-loader": "1.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next-image-trace-loader": "1.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "typescript": "^4.1.5"
   }
 }
