--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "image-trace-loader": "^1.0.2",
     "url-loader": "^4.1.1"
   },
+  "peerDependencies": {
+    "webpack": "^4.0.0 || ^5.0.0"
+  },
   "devDependencies": {
     "@types/react": "^17.0.1",
     "babel-core": "^6.26.3",
