--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "next-image-trace-loader": "1.0.1"
+    "next": "^10.0.6",
+    "next-image-trace-loader": "1.1.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
