Update example to typescript and add prettier

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -21,8 +21,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "pages/_app.js", "pages/index.js"  ],
+    "**/*.tsx", 
+    "pages/*.tsx"],
   "exclude": [
     "node_modules"
   ]
